win-capture: Add game capture
This adds the windows version of game capture.

New features:

- An option to hook any fullscreen application automatically (that
  doesn't have borders) so that no specific window configuration is
  required.  Definitely a sorely needed feature

- An option to force memory capture for the sake of compatibility with
  things such as SLI, multi-adapter setups (usually laptops), as well as
  the ability to be used with the OpenGL renderer

- An optimization option to force scaling on the GPU before texture
  transfer, reducing the transfer bandwidth (which is especially
  important for compatibility capture)

- An optimization option to limit framerate to the current OBS framerate
  to improve capture performance (mostly useful for compatibility
  capture)

- An option to capture third-party overlays (such as steam)

- Logging improvements, game capture log will now be sent via pipe
  instead of written to a separate file, making diagnosing problems a
  little bit easier

--- a/plugins/win-capture/data/locale/en-US.ini
+++ b/plugins/win-capture/data/locale/en-US.ini
@@ -7,5 +7,13 @@ WindowCapture.Priority.Class="Window Class"
 WindowCapture.Priority.Exe="Executable Name"
 CaptureCursor="Capture Cursor"
 Compatibility="Multi-adapter Compatibility"
+AllowTransparency="Allow Transparency"
 Monitor="Monitor"
 PrimaryMonitor="Primary Monitor"
+GameCapture="Game Capture"
+GameCapture.AnyFullscreen="Capture any fullscreen application"
+GameCapture.Activate="Activate"
+GameCapture.ForceScaling="Force Scaling"
+GameCapture.ScaleRes="Scale Resolution"
+GameCapture.LimitFramerate="Limit capture framerate"
+GameCapture.CaptureOverlays="Capture third-party overlays (such as steam)"
