linux-xshm: Add server property.
This adds a property to the source properties which lets the user
specify the X server to capture from. Since this is probably something
thats only useful under certain circumstances it is implemented as
an advanced setting which is only shown when the corresponding option
for advanced settings is checked.

--- a/plugins/linux-capture/data/locale/en-US.ini
+++ b/plugins/linux-capture/data/locale/en-US.ini
@@ -1,6 +1,8 @@
 X11SharedMemoryScreenInput="Screen Capture (XSHM)"
 Screen="Screen"
 CaptureCursor="Capture Cursor"
+AdvancedSettings="Advanced Settings"
+XServer="X Server"
 XCCapture="Window Capture (Xcomposite)"
 Window="Window"
 CropTop="Crop Top (pixels)"
