--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -244,6 +244,11 @@ Basic.Settings.Video.Renderer="Renderer:"
 Basic.Settings.Video.InvalidResolution="Invalid resolution value.  Must be [width]x[height] (i.e. 1920x1080)"
 Basic.Settings.Video.CurrentlyActive="Video output is currently active.  Please turn off any outputs to change video settings."
 
+# scale filters
+Basic.Settings.Video.DownscaleFilter.Bilinear="Bilinear (Fastest, but blurry if scaling)"
+Basic.Settings.Video.DownscaleFilter.Bicubic="Bicubic (Sharpened scaling, 16 samples)"
+Basic.Settings.Video.DownscaleFilter.Lanczos="Lanczos (Sparpened scaling, 32 samples)"
+
 # basic mode 'audio' settings
 Basic.Settings.Audio="Audio"
 Basic.Settings.Audio.SampleRate="Sample Rate"
