--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -247,7 +247,7 @@ Basic.Settings.Video.CurrentlyActive="Video output is currently active.  Please 
 # scale filters
 Basic.Settings.Video.DownscaleFilter.Bilinear="Bilinear (Fastest, but blurry if scaling)"
 Basic.Settings.Video.DownscaleFilter.Bicubic="Bicubic (Sharpened scaling, 16 samples)"
-Basic.Settings.Video.DownscaleFilter.Lanczos="Lanczos (Sparpened scaling, 32 samples)"
+Basic.Settings.Video.DownscaleFilter.Lanczos="Lanczos (Sharpened scaling, 32 samples)"
 
 # basic mode 'audio' settings
 Basic.Settings.Audio="Audio"
