--- a/plugins/win-dshow/data/locale/en-US.ini
+++ b/plugins/win-dshow/data/locale/en-US.ini
@@ -18,3 +18,5 @@ AudioDevice="Audio Device"
 
 # encoder text
 Bitrate="Bitrate"
+Encoder.C985="AverMedia C985 Hardware Encoder"
+Encoder.C353="AverMedia C353 Hardware Encoder"
