--- a/README
+++ b/README
@@ -7,11 +7,11 @@ What is OBS?
 
 Bug Tracker: https://obsproject.com/mantis/
 
-   We are no longer using github issues!  Please use mantis, and only report
+   We are no longer using GitHub issues!  Please use Mantis, and only report
    bugs and major issues.  Do NOT use mantis to ask questions or request
    features, please keep that to the forums.
 
-   Forum accounts are now linked to mantis bug tracker.  To use the bug
+   Forum accounts are now linked to Mantis Bug Tracker.  To use the bug
    tracker, simply log in to the forums and then go to the bug tracker link
    above.
 
