UI: Add advanced audio properties dialog
This dialog gives options such as increasing audio past 100%, forcing
the audio of a source to mono, and setting the audio sync offset of a
source (which was an oft-requested feature)

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -189,6 +189,7 @@ Basic.MainMenu.Edit.Order.MoveUp="Move &Up"
 Basic.MainMenu.Edit.Order.MoveDown="Move &Down"
 Basic.MainMenu.Edit.Order.MoveToTop="Move to &Top"
 Basic.MainMenu.Edit.Order.MoveToBottom="Move to &Bottom"
+Basic.MainMenu.Edit.AdvAudio="&Advanced Audio Properties"
 
 # basic mode help menu
 Basic.MainMenu.Help="&Help"
@@ -258,3 +259,12 @@ Basic.Settings.Audio.DesktopDevice2="Desktop Audio Device 2"
 Basic.Settings.Audio.AuxDevice="Mic/Auxiliary Audio Device"
 Basic.Settings.Audio.AuxDevice2="Mic/Auxiliary Audio Device 2"
 Basic.Settings.Audio.AuxDevice3="Mic/Auxiliary Audio Device 3"
+
+# advanced audio properties
+Basic.AdvAudio="Advanced Audio Properties"
+Basic.AdvAudio.Name="Name"
+Basic.AdvAudio.Volume="Volume (%)"
+Basic.AdvAudio.Mono="Downmix to Mono"
+Basic.AdvAudio.Panning="Panning"
+Basic.AdvAudio.SyncOffset="Sync Offset (ms)"
+Basic.AdvAudio.MediaChannel="Media Channel"
