--- a/plugins/win-dshow/data/locale/en-US.ini
+++ b/plugins/win-dshow/data/locale/en-US.ini
@@ -15,6 +15,10 @@ VideoFormat.Any="Any"
 VideoFormat.Unknown="Unknown (%1)"
 UseCustomAudioDevice="Use custom audio device"
 AudioDevice="Audio Device"
+Buffering="Buffering"
+Buffering.AutoDetect="Auto-Detect"
+Buffering.Enable="Enable"
+Buffering.Disable="Disable"
 
 # encoder text
 Bitrate="Bitrate"
