win-dshow: Add activate/deactivate button
The DirectShow input source would always turn on first use, whether the
user wanted it to or not.  I feel like having an activate/deactivate
option is a really nice thing to have, and makes configuration feel a
little bit less awkward.

--- a/plugins/win-dshow/data/locale/en-US.ini
+++ b/plugins/win-dshow/data/locale/en-US.ini
@@ -19,6 +19,8 @@ Buffering="Buffering"
 Buffering.AutoDetect="Auto-Detect"
 Buffering.Enable="Enable"
 Buffering.Disable="Disable"
+Activate="Activate"
+Deactivate="Deactivate"
 
 # encoder text
 Bitrate="Bitrate"
