win-capture: Change 'Activate' text if active
The game capture 'Activate' button is likely to fool users in to
thinking it's not actually active if the game capture displays black, so
if it's active, rename the button to 'Reactivate' in order to sort of
hint at the user that it's actually active.

--- a/plugins/win-capture/data/locale/en-US.ini
+++ b/plugins/win-capture/data/locale/en-US.ini
@@ -13,6 +13,7 @@ PrimaryMonitor="Primary Monitor"
 GameCapture="Game Capture"
 GameCapture.AnyFullscreen="Capture any fullscreen application"
 GameCapture.Activate="Activate"
+GameCapture.Reactivate="Reactivate"
 GameCapture.ForceScaling="Force Scaling"
 GameCapture.ScaleRes="Scale Resolution"
 GameCapture.LimitFramerate="Limit capture framerate"
