--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -269,4 +269,4 @@ Basic.AdvAudio.Volume="Volume (%)"
 Basic.AdvAudio.Mono="Downmix to Mono"
 Basic.AdvAudio.Panning="Panning"
 Basic.AdvAudio.SyncOffset="Sync Offset (ms)"
-Basic.AdvAudio.MediaChannel="Media Channel"
+Basic.AdvAudio.AudioTracks="Tracks"
