Update french translation

--- a/plugins/linux-v4l2/data/locale/fr-FR.ini
+++ b/plugins/linux-v4l2/data/locale/fr-FR.ini
@@ -1,4 +1,4 @@
-V4L2Input="Périphérique de Capture Vidéo (V4L2)"
+V4L2Input="Périphérique de capture vidéo (V4L2)"
 Device="Périphérique"
 Input="Entrée"
 ImageFormat="Format vidéo"
