--- a/plugins/mac-avcapture/data/locale/fr-FR.ini
+++ b/plugins/mac-avcapture/data/locale/fr-FR.ini
@@ -1,5 +1,5 @@
-AvCapture="Appareil de Capture Video"
-Device="Appareil"
-UsePreset="Utiliser la Préconfiguration"
-Preset="Préconfiguration"
+AvCapture="Périphérique de capture video"
+Device="Périphérique"
+UsePreset="Utiliser les réglages par défaut"
+Preset="Réglages par défaut"
 
