--- a/plugins/obs-x264/data/locale/fr-FR.ini
+++ b/plugins/obs-x264/data/locale/fr-FR.ini
@@ -1,8 +1,8 @@
-Bitrate="Débit"
-BufferSize="Taille du Tampon"
-KeyframeIntervalSec="Intervalle d'image clé (secondes, 0=auto)"
-CPUPreset="Préconfiguration d'utilisation du CPU (vitesse de l'encodeur)"
+﻿Bitrate="Débit"
+BufferSize="Taille du tampon"
+KeyframeIntervalSec="Intervalle d'image clé (en secondes, 0 = auto)"
+CPUPreset="Préréglage d'utilisation du CPU (vitesse de l'encodeur)"
 Profile="Profil"
 Tune="Régler"
-EncoderOptions="Paramètres de l'Encodeur x264 (séparés par des espaces)"
+EncoderOptions="Paramètres de l'encodeur x264 (séparés par des espaces)"
 
