--- a/plugins/rtmp-services/data/locale/fr-FR.ini
+++ b/plugins/rtmp-services/data/locale/fr-FR.ini
@@ -1,6 +1,6 @@
-StreamingServices="Services de Streaming"
-CustomStreamingServer="Serveur de Streaming Personnalisé"
+StreamingServices="Services de streaming"
+CustomStreamingServer="Serveur de streaming personnalisé"
 Service="Service"
 Server="Serveur"
-StreamKey="Clé de Stream"
+StreamKey="Clé de stream"
 
