--- a/plugins/win-capture/data/locale/fr-FR.ini
+++ b/plugins/win-capture/data/locale/fr-FR.ini
@@ -1,12 +1,12 @@
-MonitorCapture="Capture de l'Écran"
-WindowCapture="Capture de Fenêtre"
+﻿MonitorCapture="Capture de l'écran"
+WindowCapture="Capture de fenêtre"
 WindowCapture.Window="Fenêtre"
-WindowCapture.Priority="Priorité d'Association de Fenêtre"
-WindowCapture.Priority.Title="Titre de la Fenêtre"
-WindowCapture.Priority.Class="Classe de la Fenêtre"
+WindowCapture.Priority="Priorité d'association de fenêtre"
+WindowCapture.Priority.Title="Titre de la fenêtre"
+WindowCapture.Priority.Class="Classe de la fenêtre"
 WindowCapture.Priority.Exe="Nom de l'exécutable"
-CaptureCursor="Enregistrer le Curseur"
+CaptureCursor="Capturer le curseur"
 Compatibility="Compatibilité Multi-adaptateur"
-Monitor="Moniteur"
-PrimaryMonitor="Moniteur Principal"
+Monitor="Écran"
+PrimaryMonitor="Écran principal"
 
