--- a/plugins/win-dshow/data/locale/fr-FR.ini
+++ b/plugins/win-dshow/data/locale/fr-FR.ini
@@ -1,15 +1,15 @@
-VideoCaptureDevice="Périphérique de Capture Vidéo"
-Device="Appareil"
+VideoCaptureDevice="Périphérique de capture vidéo"
+Device="Périphérique"
 ConfigureAudio="Configurer l'audio"
-ConfigureVideo="Configurer la Vidéo"
-ConfigureCrossbar="Configurer la Crossbar"
-ResFPSType="Type de Résolution/FPS"
+ConfigureVideo="Configurer la vidéo"
+ConfigureCrossbar="Configurer la barre de défilement"
+ResFPSType="Type de résolution/FPS"
 ResFPSType.Custom="Personnalisé"
-ResFPSType.DevPreferred="Appareil préféré"
-FPS.Matching="Associer les FPS Sortants"
-FPS.Highest="FPS Maximum"
+ResFPSType.DevPreferred="Périphérique préféré"
+FPS.Matching="Associer les FPS sortants"
+FPS.Highest="FPS Maximales"
 Resolution="Résolution"
-VideoFormat="Format Vidéo"
+VideoFormat="Format vidéo"
 VideoFormat.Any="N'importe"
 VideoFormat.Unknown="Inconnu (%1)"
 UseCustomAudioDevice="Utiliser un périphérique audio personnalisé"
