--- a/plugins/win-wasapi/data/locale/fr-FR.ini
+++ b/plugins/win-wasapi/data/locale/fr-FR.ini
@@ -1,6 +1,6 @@
-AudioInput="Capture de l'Audio Entrant"
-AudioOutput="Capture de l'Audio Sortant"
-Device="Appareil"
-Default="Par Défaut"
-UseDeviceTiming="Utiliser l'Horodatage du Périphérique"
+AudioInput="Capture de l'audio entrant"
+AudioOutput="Capture de l'audio sortant"
+Device="Périphérique"
+Default="Par défaut"
+UseDeviceTiming="Utiliser l'horodatage du périphérique"
 
