--- a/obs/data/locale/fr-FR.ini
+++ b/obs/data/locale/fr-FR.ini
@@ -19,7 +19,7 @@ Mixer="Table de mixage"
 Browse="Parcourir"
 Mono="Mono"
 Stereo="Stéréo"
-DroppedFrames="Images Perdus %1 (%2%)"
+DroppedFrames="Images Perdues %1 (%2%)"
 
 NameExists.Title="Ce nom existe déjà"
 NameExists.Text="Ce nom est déjà utilisé."
@@ -31,67 +31,69 @@ ConfirmRemove.Title="Confirmer la suppression"
 ConfirmRemove.Text="Êtes-vous sûr de vouloir supprimer « $1 » ?"
 
 Output.ConnectFail.Title="Echec de la connexion"
-Output.ConnectFail.BadPath="Adresse de Connexion ou Chemin Invalide. Veuillez vérifier vos paramètres afin de confirmer leur validité."
-Output.ConnectFail.ConnectFailed="Échec de Connexion au Serveur"
+Output.ConnectFail.BadPath="Adresse de connexion ou chemin invalide. Veuillez vérifier vos paramètres afin de confirmer leur validité."
+Output.ConnectFail.ConnectFailed="Échec de la connexion au serveur"
 Output.ConnectFail.InvalidStream="Impossible d'accéder à la chaîne ou à la clé spécifiée. Cela peut être causé par une chaîne/clé invalide ou par le serveur qui vous considère toujours connecté."
-Output.ConnectFail.Error="Une erreur inattendue s'est produite en essayant de se connecter au serveur.  Plus d'informations dans le fichier journal."
+Output.ConnectFail.Error="Une erreur inattendue s'est produite en essayant de se connecter au serveur. Plus d'informations dans le fichier journal."
 Output.ConnectFail.Disconnected="Déconnecté du serveur."
 
 Output.BadPath.Title="Chemin d'accès au fichier incorrect"
 Output.BadPath.Text="Le chemin configuré pour le flux sortant est invalide. Veuillez vérifier vos paramètres pour confirmer la présence d'un chemin valide."
 
-LogReturnDialog="Mise en Ligne du Journal Réussi"
+LogReturnDialog="Mise en ligne du journal réussie"
 LogReturnDialog.CopyURL="Copier l'adresse"
-LogReturnDialog.ErrorUploadingLog="Échec de la Mise en Ligne du Journal"
+LogReturnDialog.ErrorUploadingLog="Échec de la mise en ligne du journal"
 
-LicenseAgreement="Contrat de Licence"
-LicenseAgreement.PleaseReview="Merci de revoir les termes de la licence avant d'utiliser OBS. En utilisant ce programme, vous reconnaissez avoir pris connaissance et accepté les conditions de la <a href='http://www.gnu.org/licenses/gpl-2.0.html'>Licence Publique Générale GNU v2.0 (en anglais)</a> Veuillez faire défiler vers le bas pour voir le reste de l'accord."
+LicenseAgreement="Contrat de licence"
+LicenseAgreement.PleaseReview="Merci de revoir les termes de la licence avant d'utiliser OBS. En utilisant ce programme, vous reconnaissez avoir pris connaissance et acceptez les conditions de la <a href='http://www.gnu.org/licenses/gpl-2.0.html'>Licence Publique Générale GNU v2.0 (en anglais)</a> Veuillez faire défiler vers le bas pour voir le reste de l'accord."
 LicenseAgreement.ClickIAgreeToContinue="Si vous acceptez les termes de l'accord, cliquez sur \"J'accepte\" pour continuer. Vous devez accepter l'accord pour utiliser OBS."
 LicenseAgreement.IAgree="J'accepte"
 LicenseAgreement.Exit="Quitter"
 
 Remux.SourceFile="Enregistrement OBS"
 Remux.TargetFile="Fichier cible"
-Remux.Remux="Réencapsuler"
+Remux.Remux="Convertir"
 Remux.RecordingPattern="Enregistrement OBS (*.flv)"
-Remux.FinishedTitle="Réencapsulage terminé"
-Remux.Finished="L'enregistrement est réencapsulé"
-Remux.FinishedError="L'enregistrement est réencapsulé, mais le fichier peut être incomplet"
+Remux.FinishedTitle="conversion terminée"
+Remux.Finished="L'enregistrement a été converti"
+Remux.FinishedError="L'enregistrement a été converti, mais le fichier peut être incomplet"
 Remux.SelectRecording="Choisir un enregistrement OBS …"
 Remux.SelectTarget="Choisir le fichier cible …"
-Remux.FileExistsTitle="Fichier cible existant"
-Remux.FileExists="Le fichier cible existe, voulez-vous le remplacer ?"
-Remux.ExitUnfinishedTitle="Réencapsulage en cours"
-Remux.ExitUnfinished="Le réencapsulage n'est pas terminé, arrêter maintenant peut rendre le fichier cible inutilisable.\nVoulez-vous vraiment arrêter le réencapsulage ?"
+Remux.FileExistsTitle="Fichier cible déjà existant"
+Remux.FileExists="Le fichier cible est déjà existant, voulez-vous le remplacer ?"
+Remux.ExitUnfinishedTitle="Conversion en cours"
+Remux.ExitUnfinished="La conversion n'est pas terminée, arrêter maintenant peut rendre le fichier cible inutilisable.\nVoulez-vous vraiment arrêter la conversion ?"
 
-UpdateAvailable="Nouvelle Mise à Jour Disponible"
+UpdateAvailable="Nouvelle mise à jour disponible"
 UpdateAvailable.Text="La version %1.%2.%3 est désormais disponible. <a href='%4'>Cliquez ici pour la télécharger</a>"
 
-Basic.DesktopDevice1="Audio du Bureau"
-Basic.DesktopDevice2="Audio du Bureau 2"
+Basic.DesktopDevice1="Audio du bureau"
+Basic.DesktopDevice2="Audio du bureau 2"
 Basic.AuxDevice1="Mic/Aux"
 Basic.AuxDevice2="Mic/Aux 2"
 Basic.AuxDevice3="Mic/Aux 3"
 Basic.AuxDevice4="Mic/Aux 4"
 
 Basic.Scene="Scène"
-Basic.DisplayCapture="Afficher la Capture"
+Basic.DisplayCapture="Afficher la capture"
 
-Basic.Main.AddSceneDlg.Title="Ajouter une Scène"
+Basic.Main.AddSceneDlg.Title="Ajouter une scène"
 Basic.Main.AddSceneDlg.Text="Veuillez entrer le nom de la scène"
 
 Basic.Main.DefaultSceneName.Text="Scène %1"
 
-Basic.SourceSelect="Créer/Sélectionner la Source"
-Basic.SourceSelect.CreateNew="Créé une Nouvelle Source"
-Basic.SourceSelect.AddExisting="Ajouter une Source Existante"
+Basic.SourceSelect="Créer/Sélectionner la source"
+Basic.SourceSelect.CreateNew="Créer une nouvelle source"
+Basic.SourceSelect.AddExisting="Ajouter une source existante"
 
 Basic.PropertiesWindow="Propriétés pour '%1'"
 Basic.PropertiesWindow.AutoSelectFormat="%1 (non supporté ; sélection automatique: %2)"
-Basic.PropertiesWindow.SelectColor="Sélectionnez une couleur"
-Basic.PropertiesWindow.SelectFont="Sélectionnez la police"
+Basic.PropertiesWindow.SelectColor="Sélectionner une couleur"
+Basic.PropertiesWindow.SelectFont="Sélectionner la police"
+Basic.PropertiesWindow.ConfirmTitle="Paramètres changés"
+Basic.PropertiesWindow.Confirm="Des changements n'ont pas été sauvegardés. Voulez-vous les garder ?"
 
-Basic.InteractionWindow="Interagit avec '%1'"
+Basic.InteractionWindow="Intéragir avec '%1'"
 
 Basic.StatusBar.Reconnecting="Déconnecté, reconnexion (tentative n° %1)"
 Basic.StatusBar.ReconnectSuccessful="Reconnexion réussie"
@@ -100,124 +102,124 @@ Basic.TransformWindow="Transformation de l’élément de scène"
 Basic.TransformWindow.Position="Position"
 Basic.TransformWindow.Rotation="Rotation"
 Basic.TransformWindow.Size="Taille"
-Basic.TransformWindow.Alignment="Alignement positionnel"
-Basic.TransformWindow.BoundsType="Type de Fenêtre"
-Basic.TransformWindow.BoundsAlignment="Alignement de Fenêtre"
-Basic.TransformWindow.Bounds="Taille de Fenêtre"
+Basic.TransformWindow.Alignment="Position de l'alignement"
+Basic.TransformWindow.BoundsType="Type de la fenêtre"
+Basic.TransformWindow.BoundsAlignment="Alignement de la fenêtre"
+Basic.TransformWindow.Bounds="Taille de la fenêtre"
 
 Basic.TransformWindow.Alignment.TopLeft="En haut à gauche"
-Basic.TransformWindow.Alignment.TopCenter="Centrer en Haut"
+Basic.TransformWindow.Alignment.TopCenter="Centrer en haut"
 Basic.TransformWindow.Alignment.TopRight="En haut à droite"
-Basic.TransformWindow.Alignment.CenterLeft="Centrer à Gauche"
+Basic.TransformWindow.Alignment.CenterLeft="Centrer à gauche"
 Basic.TransformWindow.Alignment.Center="Centrer"
-Basic.TransformWindow.Alignment.CenterRight="Centrer à Droite"
+Basic.TransformWindow.Alignment.CenterRight="Centrer à droite"
 Basic.TransformWindow.Alignment.BottomLeft="En bas à gauche"
-Basic.TransformWindow.Alignment.BottomCenter="Centrer en Bas"
-Basic.TransformWindow.Alignment.BottomRight="En Bas à Droite"
+Basic.TransformWindow.Alignment.BottomCenter="Centrer en bas"
+Basic.TransformWindow.Alignment.BottomRight="En bas à droite"
 
-Basic.TransformWindow.BoundsType.None="Sans Contours"
-Basic.TransformWindow.BoundsType.MaxOnly="Taille Maximale Uniquement"
-Basic.TransformWindow.BoundsType.ScaleInner="Mettre à l'échelle par les Dimensions Intérieurs"
-Basic.TransformWindow.BoundsType.ScaleOuter="Mettre à l'échelle par les Dimensions Extérieurs"
-Basic.TransformWindow.BoundsType.ScaleToWidth="Mettre à l'échelle par la Largeur"
-Basic.TransformWindow.BoundsType.ScaleToHeight="Mettre à l'échelle par la Hauteur"
-Basic.TransformWindow.BoundsType.Stretch="Étiré au Dimensions"
+Basic.TransformWindow.BoundsType.None="Sans contours"
+Basic.TransformWindow.BoundsType.MaxOnly="Taille maximale uniquement"
+Basic.TransformWindow.BoundsType.ScaleInner="Mettre à l'échelle par les dimensions intérieurs"
+Basic.TransformWindow.BoundsType.ScaleOuter="Mettre à l'échelle par les dimensions extérieurs"
+Basic.TransformWindow.BoundsType.ScaleToWidth="Mettre à l'échelle par la largeur"
+Basic.TransformWindow.BoundsType.ScaleToHeight="Mettre à l'échelle par la hauteur"
+Basic.TransformWindow.BoundsType.Stretch="Étirer aux dimensions"
 
-Basic.Main.AddSourceHelp.Title="Impossible d'ajouter la Source"
+Basic.Main.AddSourceHelp.Title="Impossible d'ajouter la source"
 Basic.Main.AddSourceHelp.Text="Vous devez avoir au moins 1 scène pour ajouter une source."
 
 Basic.Main.Scenes="Scènes"
 Basic.Main.Sources="Sources"
 Basic.Main.Connecting="Connexion en cours..."
 Basic.Main.StartRecording="Démarrer l'enregistrement"
-Basic.Main.StartStreaming="Commencer le Streaming"
+Basic.Main.StartStreaming="Commencer le streaming"
 Basic.Main.StopRecording="Arrêter l'enregistrement"
-Basic.Main.StopStreaming="Arrêter le Streaming"
+Basic.Main.StopStreaming="Arrêter le streaming"
 
 Basic.MainMenu.File="&Fichier"
 Basic.MainMenu.File.Export="&Exporter"
 Basic.MainMenu.File.Import="&Importer"
 Basic.MainMenu.File.ShowRecordings="Affichage & enregistrements"
-Basic.MainMenu.File.Remux="Réencapsuler un enregistrement"
+Basic.MainMenu.File.Remux="Convertir un enregistrement"
 Basic.MainMenu.File.Settings="&Paramètres"
 Basic.MainMenu.File.Exit="&Quitter"
 
-Basic.MainMenu.Edit="E&diter"
+Basic.MainMenu.Edit="&Editer"
 Basic.MainMenu.Edit.Undo="&Annuler"
 Basic.MainMenu.Edit.Redo="&Rétablir"
-Basic.MainMenu.Edit.UndoAction="A&nnuler $1"
-Basic.MainMenu.Edit.RedoAction="Réta&blir $1"
+Basic.MainMenu.Edit.UndoAction="&Annuler $1"
+Basic.MainMenu.Edit.RedoAction="&Rétablir $1"
 Basic.MainMenu.Edit.Transform="&Transformer"
-Basic.MainMenu.Edit.Transform.EditTransform="Éditer la Transformation..."
-Basic.MainMenu.Edit.Transform.ResetTransform="Réinitialiser la Transformation"
-Basic.MainMenu.Edit.Transform.Rotate90CW="Rotation 90° Horaire"
-Basic.MainMenu.Edit.Transform.Rotate90CCW="Rotation 90° Anti-horaire"
+Basic.MainMenu.Edit.Transform.EditTransform="Éditer la transformation..."
+Basic.MainMenu.Edit.Transform.ResetTransform="Réinitialiser la transformation"
+Basic.MainMenu.Edit.Transform.Rotate90CW="Rotation de 90° sens horaire"
+Basic.MainMenu.Edit.Transform.Rotate90CCW="Rotation de 90° sens antihoraire"
 Basic.MainMenu.Edit.Transform.Rotate180="Rotation de 180°"
-Basic.MainMenu.Edit.Transform.FlipHorizontal="Inverser &Horizontalement"
-Basic.MainMenu.Edit.Transform.FlipVertical="Inverser &Verticalement"
+Basic.MainMenu.Edit.Transform.FlipHorizontal="Inverser &horizontalement"
+Basic.MainMenu.Edit.Transform.FlipVertical="Inverser &verticalement"
 Basic.MainMenu.Edit.Transform.FitToScreen="&Adapter à l'écran"
 Basic.MainMenu.Edit.Transform.StretchToScreen="&Etirer à l'écran"
 Basic.MainMenu.Edit.Transform.CenterToScreen="&Centrer à l'écran"
 Basic.MainMenu.Edit.Order="&Ordonner"
 Basic.MainMenu.Edit.Order.MoveUp="&Monter d'un cran"
 Basic.MainMenu.Edit.Order.MoveDown="&Descendre d'un cran"
-Basic.MainMenu.Edit.Order.MoveToTop="Déplacer en tout en &Haut"
-Basic.MainMenu.Edit.Order.MoveToBottom="Déplacer tout en &Bas"
+Basic.MainMenu.Edit.Order.MoveToTop="Déplacer en tout en &haut"
+Basic.MainMenu.Edit.Order.MoveToBottom="Déplacer tout en &bas"
 
 Basic.MainMenu.Help="&Aide"
 Basic.MainMenu.Help.Logs="&Fichiers journaux"
-Basic.MainMenu.Help.Logs.ShowLogs="& Afficher les fichiers de Log"
-Basic.MainMenu.Help.Logs.UploadCurrentLog="Mettre en Ligne le Fichier Journal &Actuel"
-Basic.MainMenu.Help.Logs.UploadLastLog="Mettre en Ligne le &Dernier Fichier Journal"
-Basic.MainMenu.Help.CheckForUpdates="Rechercher des Mises à Jour"
+Basic.MainMenu.Help.Logs.ShowLogs="Afficher les &fichiers de Log"
+Basic.MainMenu.Help.Logs.UploadCurrentLog="&Mettre en ligne le fichier journal &actuel"
+Basic.MainMenu.Help.Logs.UploadLastLog="Mettre en ligne le &dernier fichier journal"
+Basic.MainMenu.Help.CheckForUpdates="Rechercher des mises à jour"
 
-Basic.Settings.ProgramRestart="Le programme doit être redémarré pour que ces paramètres prennent effet."
+Basic.Settings.ProgramRestart="Le programme doit être redémarré pour que les paramètres prennent effet."
 Basic.Settings.ConfirmTitle="Valider les modifications"
-Basic.Settings.Confirm="Vous avez des modifications non enregistrées.  Voulez-vous les enregistrer ?"
+Basic.Settings.Confirm="Vous avez des modifications non enregistrées. Voulez-vous les enregistrer ?"
 
 Basic.Settings.General="Général"
-Basic.Settings.General.Language="Langue:"
+Basic.Settings.General.Language="Langue :"
 
 Basic.Settings.Stream="Diffuser"
-Basic.Settings.Stream.StreamType="Type de Diffusion"
+Basic.Settings.Stream.StreamType="Type de diffusion"
 
 Basic.Settings.Output="Sortie"
-Basic.Settings.Output.Mode="Mode de Sortie"
-Basic.Settings.Output.Mode.Simple="Simple (Diffusion et/ou Enregistrement)"
-Basic.Settings.Output.Mode.Advanced="Avancés (type de sortie personnalisée)"
-Basic.Settings.Output.Simple.SavePath="Chemin d'Enregistrement FLV"
-Basic.Settings.Output.VideoBitrate="Débit Vidéo"
+Basic.Settings.Output.Mode="Mode de sortie"
+Basic.Settings.Output.Mode.Simple="Simple (diffusion et/ou enregistrement)"
+Basic.Settings.Output.Mode.Advanced="Avancé (type de sortie personnalisée)"
+Basic.Settings.Output.Simple.SavePath="Chemin de l'enregistrement FLV"
+Basic.Settings.Output.VideoBitrate="Débit vidéo"
 Basic.Settings.Output.AudioBitrate="Débit audio"
-Basic.Settings.Output.Reconnect="Reconnecter Automatiquement"
-Basic.Settings.Output.RetryDelay="Délais avant Tentative de Reconnexion (secondes)"
-Basic.Settings.Output.MaxRetries="Nombres de Tentatives Maximum"
+Basic.Settings.Output.Reconnect="Reconnexion automatique"
+Basic.Settings.Output.RetryDelay="Délai avant la tentative de reconnexion (en secondes)"
+Basic.Settings.Output.MaxRetries="Nombres de tentatives maximales"
 Basic.Settings.Output.Advanced="Activer les paramètres avancés d'encodage"
 Basic.Settings.Output.X264Preset="Préréglages x264"
-Basic.Settings.Output.CustomX264Settings="Paramètres personnalisés x 264"
+Basic.Settings.Output.CustomX264Settings="Paramètres personnalisés x264"
 Basic.Settings.Output.UseCBR="Utiliser un débit constant"
 
 Basic.Settings.Video="Vidéo"
-Basic.Settings.Video.Adapter="Périphérique vidéo:"
-Basic.Settings.Video.BaseResolution="Résolution de base:"
-Basic.Settings.Video.ScaledResolution="Échelle de Résolution:"
-Basic.Settings.Video.DownscaleFilter="Filtre de Réduction d’échelle:"
+Basic.Settings.Video.Adapter="Périphérique vidéo :"
+Basic.Settings.Video.BaseResolution="Résolution de base :"
+Basic.Settings.Video.ScaledResolution="Échelle de la résolution :"
+Basic.Settings.Video.DownscaleFilter="Filtrage de la mise à l'échelle :"
 Basic.Settings.Video.DisableAeroWindows="Désactiver Aero (Windows uniquement)"
-Basic.Settings.Video.FPS="FPS:"
-Basic.Settings.Video.FPSCommon="Valeur de FPS Communes"
-Basic.Settings.Video.FPSInteger="Valeur de FPS Intégrales"
-Basic.Settings.Video.FPSFraction="Valeurs de FPS Fractionelles"
+Basic.Settings.Video.FPS="FPS :"
+Basic.Settings.Video.FPSCommon="Valeur des FPS communes"
+Basic.Settings.Video.FPSInteger="Valeur des FPS intégrales"
+Basic.Settings.Video.FPSFraction="Valeurs des FPS fractionelles"
 Basic.Settings.Video.Numerator="Numérateur :"
 Basic.Settings.Video.Denominator="Dénominateur :"
-Basic.Settings.Video.Renderer="Rendu:"
-Basic.Settings.Video.InvalidResolution="Valeurs non valide de la résolution.  Doivent être [largeur] x [hauteur] (c'est-à-dire 1920 x 1080)"
-Basic.Settings.Video.CurrentlyActive="La Sortie Vidéo est actuellement Active. Veuillez éteindre toutes les sorties avant de modifier vos paramètres vidéo."
+Basic.Settings.Video.Renderer="Rendu :"
+Basic.Settings.Video.InvalidResolution="Valeurs non valide de la résolution. Doit être [largeur] x [hauteur] (c'est-à-dire 1920 x 1080)"
+Basic.Settings.Video.CurrentlyActive="La sortie vidéo est actuellement active. Veuillez éteindre toutes les sorties avant de modifier vos paramètres vidéo."
 
 Basic.Settings.Audio="Audio"
 Basic.Settings.Audio.SampleRate="Fréquence d'echantillonnage"
-Basic.Settings.Audio.Channels="Chaînes"
-Basic.Settings.Audio.DesktopDevice="Périphérique Audio du Bureau"
-Basic.Settings.Audio.DesktopDevice2="Périphérique Audio du Bureau 2"
-Basic.Settings.Audio.AuxDevice="Périphérique Audio Micro/Auxiliaire"
-Basic.Settings.Audio.AuxDevice2="Périphérique Audio Micro/Auxiliaire 2"
-Basic.Settings.Audio.AuxDevice3="Périphérique Audio Micro/Auxiliaire 3"
+Basic.Settings.Audio.Channels="Canals"
+Basic.Settings.Audio.DesktopDevice="Périphérique audio du bureau"
+Basic.Settings.Audio.DesktopDevice2="Périphérique audio du bureau 2"
+Basic.Settings.Audio.AuxDevice="Périphérique audio micro/auxiliaire"
+Basic.Settings.Audio.AuxDevice2="Périphérique audio micro/auxiliaire 2"
+Basic.Settings.Audio.AuxDevice3="Périphérique audio micro/auxiliaire 3"
 
