--- a/plugins/text-freetype2/data/locale/fr-FR.ini
+++ b/plugins/text-freetype2/data/locale/fr-FR.ini
@@ -5,9 +5,8 @@ TextFileFilter="Fichier texte (*.txt);;"
 ChatLogMode="Mode log de chat (6 dernières lignes)"
 Color1="Couleur 1"
 Color2="Couleur 2"
-Outline="Aperçu"
+Outline="Contour"
 DropShadow="Ombre portée"
 ReadFromFile="Lire le fichier"
-CustomWidth="Largeur de texte parsonnalisée"
+CustomWidth="Largeur du texte personnalisée"
 WordWrap="Retour à la ligne"
-
