UI: Add advanced output settings
Adds an 'advanced' mode to the output settings to allow more powerful
and complex streaming and recording options:

- Optionally use a different encoder for recording than for streaming to
  allow the recording to use a different encoder or encoder settings if
  desired (though at the cost if increased CPU usage depending on the
  encoders being used)

- Use encoders other than x264

- Rescale the recording or streaming encoders in case the user wishes to
  stream and record at different resolutions

- Select the specific mixer to use for recording and for streaming,
  allowing the stream and recording to use separate mixers (to for
  example allow a user to stream the game/mic audio but only record the
  game audio)

- Use FFmpeg output for the recording button instead of only recording
  h264/aac to FLV, allowing the user to output to various different
  types of file formats or remote URLs, as well as allowing the user to
  select and use different encoders and encoder settings that are
  available in the FFmpeg library

- Optionally allow the use of multiple audio tracks in a single output
  if the file formats or stream services support it

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -19,6 +19,7 @@ Properties="Properties"
 MoveUp="Move Up"
 MoveDown="Move Down"
 Settings="Settings"
+Name="Name"
 Exit="Exit"
 Mixer="Mixer"
 Browse="Browse"
@@ -216,9 +217,13 @@ Basic.Settings.Stream.StreamType="Stream Type"
 
 # basic mode 'output' settings
 Basic.Settings.Output="Output"
+Basic.Settings.Output.Encoder="Encoder"
+Basic.Settings.Output.SelectDirectory="Select Recording Directory"
+Basic.Settings.Output.SelectFile="Select Recording File"
 Basic.Settings.Output.Mode="Output Mode"
 Basic.Settings.Output.Mode.Simple="Simple (Stream and/or record)"
-Basic.Settings.Output.Mode.Advanced="Advanced (Custom output type)"
+Basic.Settings.Output.Mode.Adv="Advanced"
+Basic.Settings.Output.Mode.FFmpeg="FFmpeg Output"
 Basic.Settings.Output.Simple.SavePath="FLV Recording Path"
 Basic.Settings.Output.VideoBitrate="Video Bitrate"
 Basic.Settings.Output.AudioBitrate="Audio Bitrate"
@@ -229,6 +234,29 @@ Basic.Settings.Output.Advanced="Enable Advanced Encoder Settings"
 Basic.Settings.Output.EncoderPreset="Encoder Preset (higher = less CPU)"
 Basic.Settings.Output.CustomEncoderSettings="Custom Encoder Settings"
 Basic.Settings.Output.UseCBR="Use Constant Bitrate"
+Basic.Settings.Output.UseBufferSize="Use Custom Buffer Size"
+
+# basic mode 'output' settings - advanced section
+Basic.Settings.Output.Adv.Rescale="Rescale Output"
+Basic.Settings.Output.Adv.AudioTrack="Audio Track"
+Basic.Settings.Output.Adv.Streaming="Streaming"
+Basic.Settings.Output.Adv.Audio.Track1="Track 1"
+Basic.Settings.Output.Adv.Audio.Track2="Track 2"
+Basic.Settings.Output.Adv.Audio.Track3="Track 3"
+Basic.Settings.Output.Adv.Audio.Track4="Track 4"
+
+# basic mode 'output' settings - advanced section - recording subsection
+Basic.Settings.Output.Adv.Recording="Recording"
+Basic.Settings.Output.Adv.Recording.Type="Type"
+Basic.Settings.Output.Adv.Recording.Type.Standard="Standard"
+Basic.Settings.Output.Adv.Recording.Type.FFmpegOutput="Custom Output (FFmpeg)"
+Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Use stream encoder)"
+Basic.Settings.Output.Adv.FFmpeg.SaveFilter="Common recording formats (*.avi *.mp4 *.flv *.ts *.mkv *.wav *.aac);;All Files (*.*)"
+Basic.Settings.Output.Adv.FFmpeg.SavePathURL="File path or URL"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video Encoder (blank=default)"
+Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Video Encoder Settings (if any)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio Encoder (blank=default)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Audio Encoder Settings (if any)"
 
 # basic mode 'video' settings
 Basic.Settings.Video="Video"
