--- a/plugins/obs-x264/data/locale/en-US.ini
+++ b/plugins/obs-x264/data/locale/en-US.ini
@@ -1,5 +1,8 @@
 Bitrate="Bitrate"
+CustomBufsize="Use Custom Buffer Size"
 BufferSize="Buffer Size"
+UseCBR="Use CBR"
+CRF="CRF"
 KeyframeIntervalSec="Keyframe Interval (seconds, 0=auto)"
 CPUPreset="CPU Usage Preset (encoder speed)"
 Profile="Profile"
