--- a/plugins/obs-x264/data/locale/en-US.ini
+++ b/plugins/obs-x264/data/locale/en-US.ini
@@ -7,4 +7,5 @@ KeyframeIntervalSec="Keyframe Interval (seconds, 0=auto)"
 CPUPreset="CPU Usage Preset (higher = less CPU)"
 Profile="Profile"
 Tune="Tune"
+None="(None)"
 EncoderOptions="x264 Options (separated by space)"
