--- a/INSTALL
+++ b/INSTALL
@@ -212,9 +212,9 @@ Troubleshooting
         obs: error while loading shared libraries: libobs.so.0: cannot open
             shared object file: No such file or directory
 
-    Your library load path may be wrong or empty. Please check the contents of
-    your LD_LIBRARY_PATH environment variable. If it's empty or doesn't
+    Your library load path may be wrong or empty.  Please check the contents
+    of your LD_LIBRARY_PATH environment variable.  If it's empty or doesn't
     contain the actual path to the library mentioned in the error, add the
-    path to the environment variable and try again. Refer to the documentation
-    provided by your distribution to find out how to do this.
+    path to the environment variable and try again.  Refer to the
+    documentation provided by your distribution to find out how to do this.
     
