UI: If active, prompt user before exiting
Precautionary measure to prevent the user from accidentally clicking the
'exit' buttons

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -34,6 +34,10 @@ NameExists.Text="The name is already in use."
 NoNameEntered.Title="Please enter a valid name"
 NoNameEntered.Text="You cannot use empty names."
 
+# confirm exit dialog box
+ConfirmExit.Title="Exit OBS?"
+ConfirmExit.Text="OBS is currently active.  Are you sure you wish to exit?"
+
 # confirm delete dialog box
 ConfirmRemove.Title="Confirm Remove"
 ConfirmRemove.Text="Are you sure you wish to remove '$1'?"
