UI: Isolate filter localization strings
To prevent from causing confusion/issues for our most awesome and
respected locale editors, only localize and translate the relevant text
rather than the extensions of the filter.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -255,7 +255,8 @@ Basic.Settings.Output.Adv.Recording.Type="Type"
 Basic.Settings.Output.Adv.Recording.Type.Standard="Standard"
 Basic.Settings.Output.Adv.Recording.Type.FFmpegOutput="Custom Output (FFmpeg)"
 Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Use stream encoder)"
-Basic.Settings.Output.Adv.FFmpeg.SaveFilter="Common recording formats (*.avi *.mp4 *.flv *.ts *.mkv *.wav *.aac);;All Files (*.*)"
+Basic.Settings.Output.Adv.FFmpeg.SaveFilter.Common="Common recording formats"
+Basic.Settings.Output.Adv.FFmpeg.SaveFilter.All="All Files"
 Basic.Settings.Output.Adv.FFmpeg.SavePathURL="File path or URL"
 Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video Encoder (blank=default)"
 Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Video Encoder Settings (if any)"
