--- a/plugins/win-dshow/data/locale/en-US.ini
+++ b/plugins/win-dshow/data/locale/en-US.ini
@@ -1,6 +1,11 @@
 # video capture device text
 VideoCaptureDevice="Video Capture Device"
 Device="Device"
+ColorSpace="YUV Color Space"
+ColorSpace.Default="Default"
+ColorRange="YUV Color Range"
+ColorRange.Partial="Partial"
+ColorRange.Full="Full"
 ConfigureAudio="Configure Audio"
 ConfigureVideo="Configure Video"
 ConfigureCrossbar="Configure Crossbar"
