UI: Add 'Advanced' settings section
Currently, this allows the setting of values such as:
- Audio buffering time
- Color format (still somewhat unsupported)
- YUV color space (if a YUV format)
= YUV color range (if a YUV format)

More color formats will be added in the future, such as RGB and YUV
4:2:2 formats.

--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -298,6 +298,15 @@ Basic.Settings.Audio.AuxDevice="Mic/Auxiliary Audio Device"
 Basic.Settings.Audio.AuxDevice2="Mic/Auxiliary Audio Device 2"
 Basic.Settings.Audio.AuxDevice3="Mic/Auxiliary Audio Device 3"
 
+# basic mode 'advanced' settings
+Basic.Settings.Advanced="Advanced"
+Basic.Settings.Advanced.Audio.BufferingTime="Audio Buffering Time"
+Basic.Settings.Advanced.Video.ColorFormat="Color Format"
+Basic.Settings.Advanced.Video.ColorSpace="YUV Color Space"
+Basic.Settings.Advanced.Video.ColorRange="YUV Color Range"
+Basic.Settings.Advanced.Video.ColorRange.Partial="Partial"
+Basic.Settings.Advanced.Video.ColorRange.Full="Full"
+
 # advanced audio properties
 Basic.AdvAudio="Advanced Audio Properties"
 Basic.AdvAudio.Name="Name"
